<resources>

    <string name="app_name">6bed4</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">6bed4</string>
    <string name="tunserver_address">Tunnel Server Address:</string>
    <string name="tunclient_port">Local UDP Port:</string>
    <string name="tunserver_address_hint">145.136.0.1</string>
    <string name="tunclient_port_hint">(random)</string>
    <string name="persist_accross_reboots_text">Autostart after reboot</string>
    <string name="overtake_default_route_text">Send all IPv6 through 6bed4</string>
    <string name="enable_button_text">Enable the 6bed4 tunnel</string>
    <string name="advanced_settings">Advanced Settings</string>
</resources>